--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,13 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
 @import "tailwindcss";
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   margin: 0;
   font-family: "Inter", sans-serif;
   background-color: #080c16;
-  
 }
 
 .navBG {
