--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,3 +44,17 @@ button {
 .hide-scrollbar {
   overflow: auto;
 }
+
+
+
+/* Hide scrollbar but keep scrolling */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  /* IE & Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
